<resources>
    <string name="app_name">CanStudy</string>
    <string name="main_title">Welcome to CanStudy</string>
    <string name="main_sub_title">an app that tests your Cantonese</string>
    <string name="btn_test">Test</string>
    <string name="btn_TBC">TBC</string>
    <string name="btn_search">Search</string>
    <string name="btn_game">Game</string>
    <string name="game_option_A">A</string>
    <string name="game_option_B">B</string>
    <string name="game_option_C">C</string>
    <string name="game_option_D">D</string>
    <string name="tv_game_score">Score:</string>
    <string name="tv_game_english_description">Translate the following to Canto:</string>
    <string name="dialog_confirmation_question">Are you sure?</string>
    <string name="dialog_confirmation_description">This will stop your game. Are you sure you want to quit?</string>
    <string name="dialog_no_button">No</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="no_wrong_words_found">Test yourself first and get something wrong you smart cookie!</string>
    <string name="no_results_found">No results found</string>
    <string name="test_score">Score:</string>
    <string name="test_restart">RESTART</string>
    <string name="test_review">REVIEW</string>
    <string name="test_translate_the_following_to_canto">Translate the following to Canto:</string>
    <string name="test_cantonese">Cantonese:</string>
    <string name="review_toggle_visibility">TOGGLE VISIBILITY</string>
    <string name="review_shuffle">SHUFFLE</string>
    <string name="score_restart">RESTART</string>
    <string name="score_review">REVIEW</string>
    <string name="score_home">HOME</string>
    <string name="search_add_word">Add Word</string>
    <string name="search_english">ENGLISH</string>
    <string name="search_cantonese">CANTONESE</string>
    <string name="search_word">Search word..</string>
    <string name="test_check">Check</string>
    <string name="select_a_difficulty">Select a difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_med">Med</string>
    <string name="difficulty_hard">Hard</string>
    <string name="select_the_game_time">Select the game time:</string>
    <string name="game_time_15_seconds">15 seconds</string>
    <string name="game_time_30_seconds">30 seconds</string>
    <string name="game_time_60_seconds">60 seconds</string>
    <string name="add_phrase_word">Add phrase/word</string>
    <string name="congratulations_you_ve_reached_the_end">Congratulations! You\'ve reached the end.</string>
    <string name="would_you_like_to_restart_or_review">Would you like to restart or review?</string>
    <string name="game_restart">RESTART</string>
    <string name="game_review">REVIEW</string>
    <string name="game_game">Game</string>
    <string name="game_toolbar_title">Game</string>
    <string name="review_toolbar_title">Review</string>
</resources>