<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulations_you_ve_reached_the_end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/would_you_like_to_restart_or_review"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/game_restart"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnReview"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/game_review"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>