<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_image_height"
        app:cardElevation="8dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_image_height"
            android:scaleType="fitXY"
            android:src="@drawable/yumcha"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_title_margin_top"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="#FFA500"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_sub_title_margin_top"
        android:gravity="center"
        android:text="@string/main_sub_title"
        style="@style/AppTVColourStyle"
        android:textSize="@dimen/main_sub_title_text_size"/>

    <LinearLayout
        android:id="@+id/cl_layout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_row_height"
        android:layout_marginTop="@dimen/main_top_btn_row_margin_top">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:background="@drawable/shape_button_rounded"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_game"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_rounded"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cl_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_row_height">

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_test"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_button_rounded" />

    </LinearLayout>

</LinearLayout>