<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.ScoreActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarScore"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="Your score is..."
        style="@style/AppTVColourStyle"
        android:textSize="30sp"/>

    <LinearLayout
        android:id="@+id/llTestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tvResultLeftScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="0"
            style="@style/AppTVColourStyle"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/tvDash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="/"
            style="@style/AppTVColourStyle"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/tvResultRightScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="0"
            style="@style/AppTVColourStyle"
            android:textSize="50sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="What would you like to do?"
        style="@style/AppTVColourStyle"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScoreRestart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_restart"
            android:background="@drawable/shape_button_rounded"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScoreReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_review"
            android:background="@drawable/shape_button_rounded"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScoreHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_home"
            android:background="@drawable/shape_button_rounded"
            android:layout_margin="10dp"/>
    </LinearLayout>


</LinearLayout>